--- a/Website.html
+++ b/Website.html
@@ -155,7 +155,7 @@
                       <p>Here is a small video of how it works:</p>
                       <a href="#">
                       <video width="600" controls muted>
-                        <source src="Aida.mov" type="video/mp4">
+                        <source src="Aida.mp4" type="video/mp4">
                       </video>
                      </a>
 
