--- a/Website.html
+++ b/Website.html
@@ -97,6 +97,7 @@
                     <a href="#">
                     <video width="600" controls muted>
                       <source src="printer.mp4" type="video/mp4">
+                      <source src="printer.ogg" type="video/ogg">
                     </video>
                    </a>
 
