--- a/Website.html
+++ b/Website.html
@@ -98,6 +98,7 @@
                     <video width="600" controls muted>
                       <source src="printer.mp4" type="video/mp4">
                       <source src="printer.ogg" type="video/ogg">
+                      <source src="printer.webm" type="video/webm">
                     </video>
                    </a>
 
